Migrate EventController, create getEvent
Migrate EventController to openapi, used prettier to format the
openapi.json file, getEvent was not previously created like stated in
the issue.
